# wisdom_hal_extender

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
modules/: whale_eeprom.h  whale_radio.h  whale_rtc.h
src/: whale.h
src/modules/: radio_weak.c
src/modules_weak/: eeprom_weak.c  radio_weak.c  rtc_weak.c
